--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/dev-test-panel"
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="root"
-POSTGRES_DB="dev-test-panel"
+DATABASE_URL="postgresql://pg:tAcYf2RXNw7Y@localhost:5432/devtestpanel"
+POSTGRES_USER="pg"
+POSTGRES_PASSWORD="tAcYf2RXNw7Y"
+POSTGRES_DB="devTestPanel"
