--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
 
-DATABASE_URL="postgresql://pg:tAcYf2RXNw7Y@localhost:5432/devtestpanel"
-POSTGRES_USER="pg"
-POSTGRES_PASSWORD="tAcYf2RXNw7Y"
-POSTGRES_DB="devTestPanel"
+DATABASE_URL="postgresql://postgres:postgres@82.112.234.35:5432/devtestpanel"
